anubandha-1 corrections in progress

--- a/tex-for-print/anubandha-1.tex
+++ b/tex-for-print/anubandha-1.tex
@@ -1,6 +1,8 @@
 %\begin{multicols}{2}
 \begin{center}
-{\huge\bfseries anubaMdha 1 - hecicxna pAriBASika padagaLu}
+{\huge\bfseries anubaMdha 1}
+
+{\huge\bfseries hecicxna pAriBASika padagaLu}
 \end{center}
 
 \medskip
@@ -64,46 +66,46 @@ GanavAda taqpitx:} \ullekha{kamaRvilalxda kAraNikanu, apiRtavilalxda ApAyxyani, 
 \ullekha{sadA saninxhitave liMgapUje, satayxveV aDaDxNige, samate pariyANa, mana miVsaloVgara (savasaM. 3; cenanxba. 216-64); shAsatxrXveV aDaDxNigeyAgi AgamaveV harivANa (savasaM. 7; koVlashA. 100-45); BASegeVrisida tanuveV aDaDxNige, GanaveV harivANa, mana miVsaloVgara (savasaM. 9; apapxNaNx. 1012-313); BakatxneMba aDaDxNigeya meVle, maheVshavxraneMba harivANavanikikx (savasaM. 10; jakakxNa. 942-528); oDeyara sahapaMkitxyalilx pariyANa aDaDxNigeyanirisikoMDu uMba samagArxhakanalalx (savasaM. 8; bahurU. 144-61); aDaDxNige pariyANa taTeTx baTaTxlu ...guruvige koDabeVkeMdu tAtapxyaRvu (gaNaBA. 256-16).}}
 \end{entry}
 
-\begin{entry}
-\word{aNoVraNiVyAnf mahatoV mahiVyAnf}
-\src{va}
-\meaning{\arthanonum{``saNaNxdakikxMtalU saNaNxvanu hAgU doDaDxdakikxMtalU doDaDxvanu'':}
-\ullekha{savaRmaya AtamxneMbalilx... `aNoVraNiVyAnamxhatoVmahiVyAnf' eMbalilx (savasaM. 7; nijagu. 1279-404).}}
-\smallskip
-\newmeaning{\ni{aNoVH aNiVyAnf mahataH mahiVyAnf}}
-\end{entry}
+%\begin{entry}
+%\word{aNoVraNiVyAnf mahatoV mahiVyAnf}
+%\src{va}
+%\meaning{\arthanonum{``saNaNxdakikxMtalU saNaNxvanu hAgU doDaDxdakikxMtalU doDaDxvanu'':}
+%\ullekha{savaRmaya AtamxneMbalilx... `aNoVraNiVyAnamxhatoVmahiVyAnf' eMbalilx (savasaM. 7; nijagu. 1279-404).}}
+%\smallskip
+%\newmeaning{\ni{aNoVH aNiVyAnf mahataH mahiVyAnf}}
+%\end{entry}
 
 \begin{entry}
 \word{asaMKAyxta(ru)}
 \meaning{\arthanonum{shivaBakatx; sharaNaru:}
-\ullekha{toreyudakava kereyuMDu taqpatxvAgalu A kereyudakava halavu kelavu sAthxvara jaMgamagaLuMDu taqpitxvaDevaMte, parxBudeVvara taqpitx asaMKAyxta mahAgaNaMgaLelalxkekx taqpitxyAyitutx noVDA (savasaM. 1; basava. 1210-333); anaMtaloVkAloVkada asaMKAyxta mahAgaNaMgaLelalxru liMgaBAvadalilx BaritarAgi, gaganasidAdhxMtadiMda upadeVshakekx baMdu BakitxrAjayxvane hokukx, nijaliMgasukeSxVtarxvane kaMDu, aKaMDa paripUNaR pUjeya mADuvavarige namoVnamoV eMbe guheVshavxrA (savasaM. 2; alalxma. 281-82); iSaTx pArxNa BAvaveMba tirxvidhaliMgasaMbaMdha beVDaveMdaDe asaMKAyxta parxmathagaNaMgaLopupxvare? kUDalacenanxsaMgayayxnalilx iSaTxliMgasaMbaMdhavilalxdavara muKava noVDalAgadu parxBuve (savasaM. 3; cenanxba. 1642-600); basavaNaNx, kapilasidadhxmalilxkAjuRnA, cenanxbasavaNaNxnAgi parxBu modalAgi asaMKAyxtarelalxranu toVride guruve (savasaM. 4; sidadhxrA. 1323-382); tanu shudadhxvAyitutx shivaBakatxrokukxda koMDenanx. mana shudadhxvAyitutx asaMKAyxtara nenedenanx kaMgaLu shudadhxvAyitutx sakalanegaNaMgaLa noVDi enanx (savasaM. 5; akakxma. 230-69); ele asaMKAyxtarira I huyayxlanavadharisi salahi (basapu. 44-48).}}
+\ullekha{toreyudakava kereyuMDu taqpatxvAgalu A kereyudakava halavu kelavu sAthxvara jaMgamagaLuMDu taqpitxvaDevaMte, parxBudeVvara taqpitx asaMKAyxta mahAgaNaMgaLelalxkekx taqpitxyAyitutx noVDA (savasaM. 1; basava. 1210-333); anaMtaloVkAloVkada asaMKAyxta mahAgaNaMgaLelalxru liMgaBAvadalilx BaritarAgi, gaganasidAdhxMtadiMda upadeVshakekx baMdu BakitxrAjayxvane hokukx, nijaliMgasukeSxVtarxvane kaMDu, aKaMDa paripUNaR pUjeya mADuvavarige namoVnamoV eMbe guheVshavxrA (savasaM. 2; alalxma. 281-82); iSaTx pArxNa BAvaveMba tirxvidhaliMgasaMbaMdha beVDaveMdaDe asaMKAyxta parxmathagaNaMgaLopupxvare? kUDalacenanxsaMgayayxnalilx iSaTxliMgasaMbaMdhavilalxdavara muKava noVDalAgadu parxBuve (savasaM. 3; cenanxba. 1642-600); basavaNaNx, kapilasidadhxmalilxkAjuRnA, cenanxbasavaNaNxnAgi parxBu modalAgi asaMKAyxtarelalxranu toVride guruve (savasaM. 4; sidadhxrA. 1323-382); tanu shudadhxvAyitutx shivaBakatxrokukxda koMDenanx. mana shudadhxvAyitutx asaMKAyxtara nenedenanx kaMgaLu shudadhxvAyitutx sakalagaNaMgaLa noVDi enanx (savasaM. 5; akakxma. 230-69); ele asaMKAyxtarira I huyayxlanavadharisi salahi (basapu. 44-48).}}
 \newmeaning{\ni{na saMKAyxtaM - asaMKAyxtaM}}
 \end{entry}
 
 \begin{entry}
 \word{asaMsAkxra}
-\meaning{\arthanonum{saMsAkxravilalxda:} \ullekha{atapatxtanurajoknxV vaY AmaH saMsAkxravajiRtaH| viVrasheYva diVkeSxyanunx paDeyada berasidene BaviBeVda uLidanukarisi keYkoMDene asaMsAkxrara racitapAkaMgaLaM parihariseneV (basapu. 44-15).}}
-\newmeaning{\ni{avidayxmAnaH saMsAkxroVyasayx|}}
+\meaning{\arthanonum{saMsAkxravilalxda:} \ullekha{atapatxtanurajoknxV veY AmaH saMsAkxravajiRtaH. viVrasheYva diVkeSxyanunx paDeyade berasidene BaviBeVda uLidanukarisi keYkoMDene asaMsAkxrara racita pAkaMgaLaM parihariseneV (basapu. 44-15).}}
+\newmeaning{\ni{avidayxmAnaH saMsAkxroV yasayx|}}
 \end{entry}
 
-\begin{entry}
-\word{asatayxru}
-\src{va}
-\meaning{\arthanonum{satayxvanunx heVLadavaru matutx sadavxtaRne ilalxdavaru.}
-\ullekha{pApigaLu koVpigaLu asatayxru anAcArigaLu hogabAradu kalAyxNava. miVri hokakxheveMbavarige bALa bAya dhAre noVDirayAyx (savasaM. 3; cenanxba. 1673-611); AreVneMdaDU enanxli, koTuTxda koDe, sikikxsuvuda biDe. anaMgada naDe, atireVkada nuDi, gatigeTaTxvara saMga, hosabara kUTada Bakitxyanolalxdavara oDanATa asatayxru hoVda hAdi, enagade baTeTx, rakakxsanoDeya koTuTxda beVDa (savasaM. 9; rakakxsa. 1-1).}}
-\newmeaning{\ni{na vidayxteV satayxM yeVSAM yeVSu vA teV - asatayxH}}
-\end{entry}
+%\begin{entry}
+%\word{asatayxru}
+%\src{va}
+%\meaning{\arthanonum{satayxvanunx heVLadavaru matutx sadavxtaRne ilalxdavaru.}
+%\ullekha{pApigaLu koVpigaLu asatayxru anAcArigaLu hogabAradu kalAyxNava. miVri hokakxheveMbavarige bALa bAya dhAre noVDirayAyx (savasaM. 3; cenanxba. 1673-611); AreVneMdaDU enanxli, koTuTxda koDe, sikikxsuvuda biDe. anaMgada naDe, atireVkada nuDi, gatigeTaTxvara saMga, hosabara kUTada Bakitxyanolalxdavara oDanATa asatayxru hoVda hAdi, enagade baTeTx, rakakxsanoDeya koTuTxda beVDa (savasaM. 9; rakakxsa. 1-1).}}
+%\newmeaning{\ni{na vidayxteV satayxM yeVSAM yeVSu vA teV - asatayxH}}
+%\end{entry}
 
 \begin{entry}
-\word{aLimanadavaru}
+\word{aLimana}
 \src{va}
-\meaning{\arthanonum{duMbi (aLi)yaMte hUviniMda hUvige hArADuvavaru; asithxra manasisxnavaru ivaru sharaNara {parxkAra} yoVga sAdhanege yoVgayxralalx (va.pa.koV. 54):} \ullekha{kUDalasaMgamadeVvara Bakitx aLimanadavarige aLavaDadayAyx (savasaM. 1; basava. 668-167).}}
+\meaning{\arthanonum{asithxra manasusxLaLxvanu:} \ullekha{kUDalasaMgamadeVvara Bakitx aLimanadavarige aLavaDadayAyx (savasaM. 1; basava. 668-167).}}
 \end{entry}
 
 \begin{entry}
 \word{aLivu}
 \src{va}
-\meaning{\arthanonum{liMgAMga sAmarasayxvanunx sAdhisi matetx huTaTxdavaru (va.pa.koV. 54):} \ullekha{aLivarige uLivu elilxyU ilalxveMdu tiLi, uLivarige aLivu elilxyU ilalxveMdu tiLi (savasaM. 8; moVLige. 1490-500).}}
+\meaning{\arthanonum{liMgAMgasAmarasayxvanunx sAdhisi matetx huTaTxdiruvudu:} \ullekha{aLivarige uLivu elilxyU ilalxveMdu tiLi, uLivarige aLivu elilxyU ilalxveMdu tiLi (savasaM. 8; moVLige. 1490-500).}}
 \end{entry}
 
 %%%A
@@ -139,7 +141,7 @@ GanavAda taqpitx:} \ullekha{kamaRvilalxda kAraNikanu, apiRtavilalxda ApAyxyani, 
 \meaning{\arthanonum{Agasa; gagana; paMcamahABUtagaLalilx hAgU mUvatAtxru tatatxvXgaLalilx
 oMdu; shabadxvu guNavU vAyxpakavU Adudu. elalx jiVvarAshigaLige avakAsha
 niVDiruvudariMda AkAsha eniside. elalx iMdirxyagaLige avakAsha niVDiruvudariMda
-upAdhi\-BeVdadiMda haqdayAkAsha eniside. AkAshavu budidhxtatatxvXkekx mUla:}}
+upAdhi\-BeVdadiMda haqdayAkAsha eniside. AkAshavu budidhxtatatxvXkekx mUla AdhAra:}}
 \smallskip
 \begin{shl}
 avakAshamasheVSANAM BUtAnAM saMparxyacaCxti |\\[1pt]
@@ -162,48 +164,44 @@ dAvxviMshateVH parasAyxsayx budidhxtatatxvXsayx kAraNamf ||
 \medskip
 \pauthor{(shi.ta.ra., BA-3, 9.3.25)}
 \newmeaning{\ullekha{paqthivx apupx teVja vAyu AkAsha niraMjanadeVvA nimamx mahimeya parxNavasavxrUpaMgalalxde kANalArigeyU bAradayAyx (savasaM. 1; basava. 814-209); sadoyxVjAtamuKadalilx paqthivx puTiTxtutx, ...IshAnamuKadalilx AkAsha puTiTxtutx; iMtiV paMcabarxhamxdiMda paMcamahABUtaMgaLu huTiTxduvu... AkAshakekx shabadx oMdeV guNa bayaligihude dhamaR suLihudakekx te\char'273huguDuvude kamaR kaqSaNxvaNaR adhideVvate sadAshivanu (karaha. 658-7).}}
-\newmeaning{\ni{A samaMtAtf kAshaMteV sUyaRgarxhAdayaH yasimxnf saH - AkAshaH}}
+\newmeaning{\ni{AsamaMtAtf kAshaMteV sUyaRgarxhAdayaH yasimxnf saH - AkAshaH}}
 \end{entry}
 
 \begin{entry}
 \word{AkAshada pUvARsharxya}
 \src{va}
-\meaning{\artha{AkAshada modalina asitxtavx, -iravu. shiva hAgU Bakatxna naDuvina BinanxBAvavu Bakatxnu dhAyxnasithxtiyalilx mADuva OMkAra maMtarxdiMda nivAraNeyAguvudu (viV.pA.koV. 60):}
-\ullekha{AkAshada pUvARsharxya maMtarxdiMda hoVhudu (savasaM. 3; cenanxba. 47-15).}
-\artha{paMcaBUtagaLalolxMdAda AkAshatatatxvXkekx shabadxveV muKayx
- guNa. namamx deVhadalilx AkAshatatatxvXvu iruvudariMda {namage}
- sumadhura shabadx keVLisikoLaLxbeVku, kakaRsha shabadxvanunx
- keVLisikoLaLxbAradu eMba sAvxBAvika Ase irutatxde. Adare
- sadaBxkatxnige AdhAyxtimxka parxvacanagaLanunx keVLisikoMDu, tananx
- AdhAyxtimxka parxgatiyanunx sAdhisikoLaLxbeVkeMba
- haMbalavirutatxde. matetx kelavu sadaBxkatxru yAvudeV riVtiya
- mAtugaLiMda vicalitarAguvudilalx. matetx kelavaru tAvu
- keVLisikoMDududelalx shivamaMtarxveMdu managANutAtxre. hiVgAgi,
- avaralilxruva AkAshatatatxvXvu tananx pUvARsharxyavanunx kaLedukoMDu,
- avara AdhAyxtimxka parxgatige pUrakavAgutatxde (va.pa.koV. 55):} \ullekha{Bakatx BakatxneMbaru, paqthivxya pUvARsharxyava kaLeyalariyadananxkakx ...AkAshada pUvARsharxyava kaLeyalariyadananxkakx... BakatxreMdu liMgava pUjisuvavara kaMDu nAnu beragAde guheVshavxra (savasaM. 2; alalxma. 136-42).}}
+\meaning{\artha{paMcaBUtagaLalolxMdAda AkAshatatatxvXkekx shabadxveV muKayx guNa. namamx deVhadalilx AkAshatatatxvXvu iruvudariMda namage shabadx keVLisutatxde. sharaNanu tAnu keVLisikoMDududelalx shivamaMtarxveMdu managANutAtxne. idariMdAgi AkAshatatatxvXvu tananx pUvARsharxyavanunx kaLedukoMDu, AdhAyxtimxka parxgatige sAdhanavAgutatxde:} \ullekha{Bakatx BakatxneMbaru, paqthivxya pUvARsharxyava kaLeyalariyadananxkakx ...AkAshada pUvARsharxyava kaLeyalariyadananxkakx... BakatxreMdu liMgava pUjisuvavara kaMDu nAnu beragAde guheVshavxra (savasaM. 2; alalxma. 136-42); AkAshada pUvARsharxya maMtarxdiMda hoVhudu (savasaM. 3; cenanxba. 47-15).}}
 \newmeaning{\ni{pUvaRshacx asw Asharxyashacx - pUvARsharxyaH}}
 \end{entry}
+%%\artha{AkAshada modalina asitxtavx, -iravu. shiva hAgU Bakatxna naDuvina BinanxBAvavu Bakatxnu dhAyxnasithxtiyalilx mADuva OMkAra maMtarxdiMda nivAraNeyAguvudu (viV.pA.koV. 60):}
+%ikoLaLxbeVku, kakaRsha shabadxvanunx keVLisikoLaLxbAradu eMba sAvxBAvika Ase irutatxde. Adare sadaBxkatxnige AdhAyxtimxka parxvacanagaLanunx keVLisikoMDu, tananx AdhAyxtimxka parxgatiyanunx sAdhisikoLaLxbeVkeMba haMbalavirutatxde. matetx kelavu sadaBxkatxru yAvudeV riVtiya mAtugaLiMda vicalitarAguvudilalx. matetx kelavaru tAvu  pUrakavAgutatxde (va.pa.koV. 55)
 
 \begin{entry}
-\word{Adi anAdiyilalxdaMdu}
-\meaning{\arthanonum{aneVka vacanagaLu `Adi anAdi ilalxdaMdu', `Adi anAdigaLiMdatatxtatx' eMdu pArxraMBavAgutatxde. I padagaLU, saqSiTxpUvaRda parashivana sithxtige anavxyisutatxde. shivanige saqSiTxsabeVkeMba iceCxyU, tAnobabxneV idedxVneMba arivU ilalxda sithxtiyadu. idanenxV kelavu veVLe shUnayx, bayalu muMtAgi kareyalAgutatxde.}}
-\smallskip
-\newmeaning{\arthanonum{\qquad Adare AdiyAgali anAdiyAgali ilalxda kAla athavA vasutx EkakAlakekx iralu sAdhayxveV? parxpaMcaveV iralilalx eMdAga, AdiyuLaLx parxpaMcaviralilalx eMdathaRvAgutatxde; Adare anAdiyAda parashiva shUnayxsithxtiyalilxdadx. aMda meVle, saqSiTxpUvaR sithxtiyu Adi anAdiyilalxda kAla heVgAgutatxde eMbudeV I padaparxyoVga saqSiTxsuva samaseyx. adeV riVti, parashivaneV anAdi eMdameVle avananunx Adi anAdiyiMdatatxtatx eMdu vaNiRsuvudara athaRveVnu, eMba samaseyxyU barutatxde. I samaseyxge pArxyashaH I keLagina utatxra samapaRkavenisabahudu.}}
-\smallskip
-\newmeaning{\arthanonum{\qquad namage oMdu vasutxvina jAcnxna uMTAgabeVkAdare, adanunx nAvu iMdirxyagaLa mUlaka anuBavisabeVkaSeTxV alalx, adanunx itara vasutxgaLoDane hoVlisalU beVkAgutatxde. udAharaNege, nAvu oMdu pusatxkavanunx noVDidAga, adanunx itara pusatxkagaLoDane hoVlisi ``idU saha oMdu pusatxka'' eMdu heVLutetxVve; alalxde, paroVkaSxvAgi (hAgU mAnasikavAgi), idu kuciRyalalx, beTaTxvalalx, muMtAgiyU heVLutetxVve. parxpaMcada tuMbelalx pusatxkavalalxde matetxVnU ilalxdidadxre, adakekx `pusatxka'veMba hesaru irutitxralilalx. Adare adanunx noVDuva manuSayxneMba eraDaneV vasutxvidadxre, Aga avanu tAnu manuSayx, adu pusatxka eMdu Binanx mADutAtxne. obabx vayxkitxyanunx ``basava'' athavA ``kuLaLx'' eMdu kareyuvudu avananunx itarariMda (basavaralalxda, kuLaLxralalxdavariMda) parxteyxVkisuva saluvAgi; adeV riVti oMdu pusatxkavanunx athavA oMdu baNaNxvanunx pusatxka athavA keMpu eMdu kareyuvudu adanunx pusatxkavalalxda vasutxgaLiMda athavA keMpalalxda baNaNxgaLiMda parxteyxVkisuvudakAkxgi. hiVge hoVlike vayxtAyxsagaLanunx ariyade nAvu EnanUnx ariyalu sAdhayxvilalx.}}
-\smallskip
-\newmeaning{\arthanonum{\qquad adeV riVti, oMdu vasutxvanunx noVDi, idakekx Adiyide enunxtetxVve; adanunx mADidavanigU Adiyide enunxtetxVve. Adare iDiV parxpaMcavanenxV gaNanege tegedukoMDare, parxpaMcakekx Adiyide, adanunx saqSiTxsidavanige (parashivanige) Adiyilalx enunxtetxVve. Adare parxpaMcavU ilalxde, parashivanige saqSiTxsabeVkeMba iceCxyU ilalxdidAdxga, Adi-anAdi eMba joVDi padakekx A athaRkoDabahudeV? idanunx matotxMdu daqSATxMtada mUlaka pariharisabahudu.}}
-\smallskip
-\newmeaning{\arthanonum{\qquad obabx vayxkitx oMdu dhamaRkekx seVridavanAgidadxre, ``avanu viVra\-sheYvanAgirabeVku athavA viVrasheYveVtaranAgirabeVku'' enunxvudu satayx. ``avanu viVrasheYvanU alalx, viVrasheYveVtaranU alalx'' enunxvudu asatayx. oMdu veVLe A {vayxkitx} yAvudeV dhamaRkekx seVrada vayxkitx Agidadxre, ``avanu viVrasheYvanAgirabeVku athavA viVrasheYveVtaranAgirabeVku'' enunxvudu sariyalalx. adeV riVti nAvu parxpaMcavanunx noVDi, idakekx Adiyide, parashivanu anAdi enunxtetxVve. Adare parxpaMcaveV ilalxdidadxre, aMdare hoVlike vayxtAyxsagaLanunx upayoVgisikoMDu tiLiyuva manuSayxneV ilalxdidadxre, Adi anAdi eMba padagaLige athaRvilalxvAgutatxde. {aMdare} parxpaMcaveV ilalxdaMtha saMdaBaRdalilx adanunx Adi eMdu kareyabeVkAgilalx; AdiyeMdu kareyabeVkAgilalxvAdudariMda adanunx ``anAdi'' eMbudariMda parxteyxVkisabeVkAgilalx. aMdare, shUnayx kAlakekx saMbaMdhisidaMte ``Adi-anAdi'' eMba padaparxyoVga nirathaRka.}}
-\smallskip
-\newmeaning{\arthanonum{\qquad ``AdianAdiyilalxdaMdu'' eMbudakekx matotxMdu riVtiya athaR koDabahudu. kelavu vacanakAraru `Adi' eMbudanunx deVhaveMdU, `anAdi' eMbudanunx AtamxveMdU atheYRsutAtxre. Aga saqSiTx pUvaR sithxtiyu ``Adi anAdiyilalxda'' kAla eMdu vaNiRsuvudu sUkatxvAgide (va.pa.koV. 68.70).}}
-\newmeaning{\ni{navidayxteV AdiH yasayxsaH - anAdiH}}
+\word{Adi anAdi}
+\meaning{\arthanonum{daqSiTxya pUvaRdalilx namage oMdu vasutxvina jAcnxna uMTAgabeVkAdare, adanunx nAvu iMdirxyagaLa mUlaka anuBavisabeVkaSeTxV alalx, adanunx itara vasutxgaLoDane hoVlisalU beVkAgutatxde.}}
+\newmeaning{\ni{na vidayxteV AdiH yasayxsaH - anAdiH}}
 \end{entry}
+
+%\begin{entry}
+%\word{Adi anAdiyilalxdaMdu}
+%\meaning{\arthanonum{aneVka vacanagaLu `Adi anAdi ilalxdaMdu', `Adi anAdigaLiMdatatxtatx' eMdu pArxraMBavAgutatxde. I padagaLU, saqSiTxpUvaRda parashivana sithxtige anavxyisutatxde. shivanige saqSiTxsabeVkeMba iceCxyU, tAnobabxneV idedxVneMba arivU ilalxda sithxtiyadu. idanenxV kelavu veVLe shUnayx, bayalu muMtAgi kareyalAgutatxde.}}
+%\smallskip
+%\newmeaning{\arthanonum{\qquad Adare AdiyAgali anAdiyAgali ilalxda kAla athavA vasutx EkakAlakekx iralu sAdhayxveV? parxpaMcaveV iralilalx eMdAga, AdiyuLaLx parxpaMcaviralilalx eMdathaRvAgutatxde; Adare anAdiyAda parashiva shUnayxsithxtiyalilxdadx. aMda meVle, saqSiTxpUvaR sithxtiyu Adi anAdiyilalxda kAla heVgAgutatxde eMbudeV I padaparxyoVga saqSiTxsuva samaseyx. adeV riVti, parashivaneV anAdi eMdameVle avananunx Adi anAdiyiMdatatxtatx eMdu vaNiRsuvudara athaRveVnu, eMba samaseyxyU barutatxde. I samaseyxge pArxyashaH I keLagina utatxra samapaRkavenisabahudu.}}
+%\smallskip
+%\newmeaning{\arthanonum{\qquad udAharaNege, nAvu oMdu pusatxkavanunx noVDidAga, adanunx itara pusatxkagaLoDane hoVlisi ``idU saha oMdu pusatxka'' eMdu heVLutetxVve; alalxde, paroVkaSxvAgi (hAgU mAnasikavAgi), idu kuciRyalalx, beTaTxvalalx, muMtAgiyU heVLutetxVve. parxpaMcada tuMbelalx pusatxkavalalxde matetxVnU ilalxdidadxre, adakekx `pusatxka'veMba hesaru irutitxralilalx. Adare adanunx noVDuva manuSayxneMba eraDaneV vasutxvidadxre, Aga avanu tAnu manuSayx, adu pusatxka eMdu Binanx mADutAtxne. obabx vayxkitxyanunx ``basava'' athavA ``kuLaLx'' eMdu kareyuvudu avananunx itarariMda (basavaralalxda, kuLaLxralalxdavariMda) parxteyxVkisuva saluvAgi; adeV riVti oMdu pusatxkavanunx athavA oMdu baNaNxvanunx pusatxka athavA keMpu eMdu kareyuvudu adanunx pusatxkavalalxda vasutxgaLiMda athavA keMpalalxda baNaNxgaLiMda parxteyxVkisuvudakAkxgi. hiVge hoVlike vayxtAyxsagaLanunx ariyade nAvu EnanUnx ariyalu sAdhayxvilalx.}}
+%\smallskip
+%\newmeaning{\arthanonum{\qquad adeV riVti, oMdu vasutxvanunx noVDi, idakekx Adiyide enunxtetxVve; adanunx mADidavanigU Adiyide enunxtetxVve. Adare iDiV parxpaMcavanenxV gaNanege tegedukoMDare, parxpaMcakekx Adiyide, adanunx saqSiTxsidavanige (parashivanige) Adiyilalx enunxtetxVve. Adare parxpaMcavU ilalxde, parashivanige saqSiTxsabeVkeMba iceCxyU ilalxdidAdxga, Adi-anAdi eMba joVDi padakekx A athaRkoDabahudeV? idanunx matotxMdu daqSATxMtada mUlaka pariharisabahudu.}}
+%\smallskip
+%\newmeaning{\arthanonum{\qquad obabx vayxkitx oMdu dhamaRkekx seVridavanAgidadxre, ``avanu viVra\-sheYvanAgirabeVku athavA viVrasheYveVtaranAgirabeVku'' enunxvudu satayx. ``avanu viVrasheYvanU alalx, viVrasheYveVtaranU alalx'' enunxvudu asatayx. oMdu veVLe A {vayxkitx} yAvudeV dhamaRkekx seVrada vayxkitx Agidadxre, ``avanu viVrasheYvanAgirabeVku athavA viVrasheYveVtaranAgirabeVku'' enunxvudu sariyalalx. adeV riVti nAvu parxpaMcavanunx noVDi, idakekx Adiyide, parashivanu anAdi enunxtetxVve. Adare parxpaMcaveV ilalxdidadxre, aMdare hoVlike vayxtAyxsagaLanunx upayoVgisikoMDu tiLiyuva manuSayxneV ilalxdidadxre, Adi anAdi eMba padagaLige athaRvilalxvAgutatxde. {aMdare} parxpaMcaveV ilalxdaMtha saMdaBaRdalilx adanunx Adi eMdu kareyabeVkAgilalx; AdiyeMdu kareyabeVkAgilalxvAdudariMda adanunx ``anAdi'' eMbudariMda parxteyxVkisabeVkAgilalx. aMdare, shUnayx kAlakekx saMbaMdhisidaMte ``Adi-anAdi'' eMba padaparxyoVga nirathaRka.}}
+%\smallskip
+%\newmeaning{\arthanonum{\qquad ``AdianAdiyilalxdaMdu'' eMbudakekx matotxMdu riVtiya athaR koDabahudu. kelavu vacanakAraru `Adi' eMbudanunx deVhaveMdU, `anAdi' eMbudanunx AtamxveMdU atheYRsutAtxre. Aga saqSiTx pUvaR sithxtiyu ``Adi anAdiyilalxda'' kAla eMdu vaNiRsuvudu sUkatxvAgide (va.pa.koV. 68.70).}}
+%\newmeaning{\ni{navidayxteV AdiH yasayxsaH - anAdiH}}
+%\end{entry}
 
 \begin{entry}
 \word{Adiyanaruhida anAdiya toVridavanu}
 \src{va}
-\meaning{\arthanonum{idu guruvige anavxyavAguva pada. guruvu AdiyuLaLx iSaTxliMgavanunx koTuTx, adara savxrUpavanUnx mahatavxvanUnx, agatayxvanUnx kuritu shiSayxnige boVdhisutAtxne; alalxde inUnx muMde, shiSayxna sAdhane muMduvaredaMtelalx avanige shivayoVgada {mUlaka} anAdi parashivananUnx toVrisikoDutAtxne. {boVdhisi}, toVrisada guru guruvalalx (va.pa.koV. 71):} \ullekha{Adiyanaruhida, anAdiya toVrida, ihava keDisida, parava nilisida, Ganava toVrida... muMdaNa gatiya saMdeVhava biDisida (savasaM. 1; basava. 1042-280).}}
+\meaning{\arthanonum{guruvu AdiyuLaLx iSaTxliMgavanunx koTuTx, adara savxrUpa matutx mahatavxvanunx shiSayxnige boVdhisutAtxne; shiSayxna sAdhane muMduvaredaMtelalx avanige shivayoVgada {mUlaka} anAdi parashivananUnx toVrisikoDutAtxne:} \ullekha{Adiyanaruhida, anAdiya toVrida, ihava keDisida, parava nilisida, Ganava toVrida... muMdaNa gatiya saMdeVhava biDisida (savasaM. 1; basava. 1042-280).}}
 \end{entry}
 
 \begin{entry}
@@ -221,8 +219,8 @@ dAvxviMshateVH parasAyxsayx budidhxtatatxvXsayx kAraNamf ||
 \begin{entry}
 \word{iMdumada}
 \src{kA}
-\meaning{\arthanonum{Ishavxrana aSaTxtanumadagaLalilx oMdu; caMdarx; (iMdarx) rUpamada:}
-\ullekha{iMdu madavetetx ciMtABaritaneMtahudoyeMdu ciMtipanu nAtamxmadavetatx migehaMte muMde nage sariyArenutitxpa\char'263naSaTx mUtiR madaMgaLaMtiLuvudu (viVsheYpu. 7-100-19).}}
+\meaning{\arthanonum{Ishavxrana aSaTxtanumadagaLalilx oMdu; rUpamada; caMdarx:}
+\ullekha{iMdumadavetetx ciMtABaritaneMtahudoyeMdu ciMtipanu nAtamxmadavetatx migehaMte muMdenage sariyArenutitxpa\char'263naSaTxmUtiR madaMgaLaMtiLuvudu (viVsheYpu. 7-100-19).}}
 \newmeaning{\arthanonum{\SEE{aSaTxtanumada}}}
 \end{entry}
 
@@ -238,13 +236,13 @@ dAvxviMshateVH parasAyxsayx budidhxtatatxvXsayx kAraNamf ||
 
 \begin{entry}
 \word{upadeVshapariVkeSx}
-\meaning{\arthanonum{guruvina upadeVshavanunx pariVkeSx mADuvudu:} \ullekha{supathamaMtarxdupadeVshava kalitu, yukitxgeTuTx naDevirayAyx, tatatxvXmasi eMbudanaridu katatxlege ODuvirayAyx. veVdaviparxra vicArisi noVDalu, upadeVshapariVkeSx narakaveMdudu kUDalasaMgana vacanasUcane (savasaM. 1; basava. 91-25); ``tirxvidha diVkeSxyiMda tirxvidhAMgadalilx tirxvidhaliMgava saMbaMdhava mADikoMDu kirxyAjAcnxnaBAvAcAraveMba tirxvidhaBakitxviDidAcarisuvaMtha pariVkeSx" (basaTiV. {\rm\em{I}}, 84-94 TiVke).}}
+\meaning{\arthanonum{guruvina upadeVshavanunx pariVkeSxge oLagu mADuvudu:} \ullekha{supathamaMtarxdupadeVshava kalitu, yukitxgeTuTx naDevirayAyx, tatatxvXmasi eMbudanaridu katatxlege ODuvirayAyx. veVdaviparxra vicArisi noVDalu, upadeVshapariVkeSx narakaveMdudu kUDalasaMgana vacanasUcane (savasaM. 1; basava. 91-25); tirxvidha diVkeSxyiMda tirxvidhAMgadalilx tirxvidhaliMgava saMbaMdhava mADikoMDu kirxyAjAcnxnaBAvAcAraveMba tirxvidhaBakitxviDidAcarisuvaMtha pariVkeSx (basaTiV. {\rm\em{I}}, 84-94 TiVke).}}
 \newmeaning{\ni{upadeVshasayx pariVkASx - upadeVshapariVkASx}}
 \end{entry}
 
 \begin{entry}
 \word{upame}
-\meaning{\arthanonum{= upamAdiVkeSx:}
+\meaning{\arthanonum{= upamA eMba diVkeSx:}
 \ullekha{upame upamisalariyade upamAtiVtavenutitxdidxtu. arivu, arivina mareyalilxduRdanariyalariyade, parAparaveMdu nuDiyutitxdidxtu (savasaM. 2; alalxma. 652-175); samate sayavAda sharaNaMge ariva mareyaluMTe upame niHsathxlavAda sharaNaMge shabadxsaMdaNi uMTe? (savasaM. 3; cenanxba. 833-244); AyAjecnxyupame kaLashABiSeVkaMgaLA sAvxyatatxdiMdalesagutatxlA ta\char'273\char'304vAyoLeV ahoV savxsitxkAroVhaNa viBUti paTaTxM saliMgAyatavadu A adhikaliMga susAvxyataMgaLumenipipxVyeVMde ...kAyakekx diVkeSxyaM mADi (viVsheYpu. 7-110-70).}}
 \newmeaning{\ni{upamiVyateV iti - upamA}}
 \end{entry}
@@ -252,15 +250,15 @@ dAvxviMshateVH parasAyxsayx budidhxtatatxvXsayx kAraNamf ||
 \begin{entry}
 \word{upAdhike}
 \src{va}
-\meaning{\arthanonum{bayake; ajAcnxnadaMte namamx sAvxthaR bayakegaLU saha Atamxna mUla savxrUpavanunx maremADuvudariMda avu saha upAdhikegaLenisikoLuLxtatxve. I bayakegaLu ucacx maTaTxdavidadxrU saha avu upAdhikegaLu:}
-\ullekha{upAdhikeya mADuvalilx varxta uLiyitutx, AcAra sikikxtutx (savasaM. 5; akakxmamx. 554-173); guruvina upAdhikeya shiSayxnaritalilx A guruviMge heVLade sumamxnidadxlilx gurudorxVha tanagAyitutx (savasaM. 6; arimo. 623-184); upAdhike oDalAsheyaM keDemeTiTx poDaviya senxVhamaM huDiguTiTx huTuTxda toredu Ura haMgilalxde nivARNiyAgi nijamukitx soVpAnavAgipapx karapAterx eMba biridu (savasaM. 11; GanaliM. 729-341).}}
+\meaning{\arthanonum{bayake; Atamxna mUla savxrUpavanunx maremADuva bayakegaLu. I bayakegaLu ucacx maTaTxdavidadxrU saha avu upAdhikegaLu:}
+\ullekha{upAdhikeya mADuvalilx varxta uLiyitutx, AcAra sikikxtutx (savasaM. 5; akakxmamx. 554-173); guruvina upAdhikeya shiSayxnaritalilx A guruviMge heVLade sumamxnidadxlilx gurudorxVha tanagAyitutx (savasaM. 6; arimo. 623-184); upAdhike oDalAsheyaM keDemeTiTx poDaviya senxVhamaM huDiguTiTx huTuTxda toredu Ura haMgilalxde nivARNiyAgi nijamukitxsoVpAnavAgipapx karapAterx eMba biridu (savasaM. 11; GanaliM. 729-341).}}
 \newmeaning{\ni{upAdhiH Eva - upAdhikA}}
 \end{entry}
 
 \begin{entry}
 \word{uBayadaMga EkiVkaravAguvudu}
 \src{va}
-\meaning{\arthanonum{aMganalilx heVge AtamxnidAdxnoV, hAge parxpaMcaveMba vasutxvinalilxyU Atamx\-nidAdxne. avaneV vishAvxtamx athavA parashiva. parashivanige vishavxvu heVge oMdu aMgavoV, hAgeyeV mAnavana AtamxvU oMdu aMga. aMdare, parashivanige mAnavara Atamx matutx vishavx eMba eraDu aMgagaLive; alalxde namamx AtamxvU vishAvxtamxvU oMdeV (uBaya aMgagaLalilxruvudu EkiVkarisutatxde):}
+\meaning{\arthanonum{aMganalilx heVge AtamxnidAdxnoV, hAge parxpaMcaveMba vasutxvinalilxyU Atamx\-nidAdxne. avaneV vishAvxtamx athavA parashiva. parashivanige vishavxvu heVge oMdu aMgavoV, hAgeyeV vayxkitxya jiVvAtamxvU oMdu aMga. aMdare, parashivanige Atamx matutx vishavx eMba eraDu aMgagaLive; alalxde vayxkitxya AtamxvU vishAvxtamxvU oMdeV (uBaya aMgagaLalilxruvudu EkiVkarisutatxde):}
 \ullekha{uBayavanariva citatxkekx arive iSaTxliMgakekx gotutx. uBayadaMga EkiVkaravAdalilx jala balidu shukitxyAdaMte, karaMDagaBaRdalilx balidu karaMDavano[De]daridaMte, aMgadalilxdadxridu, GanaliMgavanariyabeVku (savasaM. 9; shivaleM. 241-78).}}
 \end{entry}
 
@@ -275,28 +273,26 @@ dAvxviMshateVH parasAyxsayx budidhxtatatxvXsayx kAraNamf ||
 \begin{entry}
 \word{uriyuMDa kapuRra}
 \src{va}
-\meaning{\arthanonum{uriyuMDa kapURravu heVge tAnu ilalxvAgi uriye AgutatxdeyoV, hAgeyeV liMgadalilx aikayxvAda aMgavU tananxtanavanunx kaLedukoMDu liMgaveV Agutatxde:}
+\meaning{\arthanonum{urisoVkida kapURravu heVge tAnu ilalxvAgi uriyeV Aguva hAge liMgadalilx aikayxvAda aMgavU tananxtanavanunx kaLedukoMDu liMgaveV Agutatxde:}
 \ullekha{ele paramaguruve kUDalasaMgayayxnalilx uriyuMDa kapuRradaMtAdeyalAlx (savasaM. 1; basava. 1092-295).}}
-\newmeaning{\arthanonum{\SEE{shibikapURra}}}
+\newmeaning{\arthanonum{\SEE{shiKikapURra}}}
 \end{entry}
 
 \begin{entry}
 \word{uLivu}
 \src{va}
-\meaning{\arthanonum{aneVka riVtiya kamaRgaLanunx mADi niraMtaravAgi punajaRnamxgaLanunx paDeyutAtx saMsAradalelx uLiyuvudu:}
-\ullekha{aLivarige uLivu elilxyU ilalxveMbuda tiLi, uLivarige aLivu. elilxyU ilalxveMbuda tiLi, I aLivu uLivu eMbuBayavaneVneMbuda tiLi. tiLida matetx niHkaLaMka malilxkAjuRna EnU ilalxveMbuda tiLi (savasaM. 8; moVLige. 1490-500).}}
+\meaning{\arthanonum{bamdhanadalilxyeV jiVvanu punajaRnamxgaLanunx paDeyutAtx saMsAra uLiyuvudu:}
+\ullekha{aLivarige uLivu elilxyU ilalxveMbuda tiLi, uLivarige aLivu elilxyU ilalxveMbuda tiLi, I aLivu uLivu eMbuBayavaneVneMbuda tiLi. tiLida matetx niHkaLaMka malilxkAjuRna EnU ilalxveMbuda tiLi (savasaM. 8; moVLige. 1490-500).}}
 \newmeaning{\arthanonum{\SEE{aLivu}}}
 \end{entry}
 
 %%%e
 
-
-
 \begin{entry}
 \word{eMjalusUtaka}
 \src{va}
-\meaning{\arthanonum{paMcasUtakagaLalilx oMdu; guru - liMga - jaMgamada BukatxsheVSa parxsAdavAgutatxde. aMtaha pavitarxvAda parxsAda sivxVkAra eMjalAgadu. liMgadhArigaLAda viVrasheYvaru sivxVkarisuva parxsAda BukatxsheVSavAdarU, adakekx eMjalu sUtakavilalx:}
-\ullekha{shivamaMtarx saMsAkxravilalxda tanuBavigaLu tananx liMgakekx mADuvananxkakx Bavimisharxva kaLedeveMdeMtenabahudu? shivasaMsAkxravAgi jAti sUtaka jananasUtaka perxVtasUtaka rajasUsxtaka eMjalusUtakaveMba paMcasUtakavuLaLx BavigaLu tananx liMgakekx mADuvananxkakx Bavimisharxva kaLedeveMdeMtenabahudu (savasaM. 3; cenanxba. 163-49).}}
+\meaning{\arthanonum{paMcasUtakagaLalilx oMdu; guru - liMga - jaMgamada BukatxsheVSa parxsAdavAgutatxde. aMtaha pavitarxvAda parxsAda sivxVkAra eMjalAgadu:}
+\ullekha{shivamaMtarx saMsAkxravilalxda tanuBavigaLu tananx liMgakekx mADuvananxkakx Bavimisharxva kaLedeveMdeMtenabahudu? shivasaMsAkxravAgi jAtisUtaka jananasUtaka perxVtasUtaka rajasUsxtaka eMjalusUtakaveMba paMcasUtakavuLaLx BavigaLu tananx liMgakekx mADuvananxkakx Bavimisharxva kaLedeveMdeMtenabahudu (savasaM. 3; cenanxba. 163-49).}}
 \newmeaning{\ni{eMjalusUtaka: deV.|| tami. ecacx; mala, koDa, ecicx; telu. eMgili; goMdi, yeMgalf. malo. eMge. eMgeY - eMjalf + sUtaka}}
 \newmeaning{\arthanonum{\SEE{uciCxSaTxsUtaka}}}
 \end{entry}
@@ -304,14 +300,15 @@ dAvxviMshateVH parasAyxsayx budidhxtatatxvXsayx kAraNamf ||
 \begin{entry}
 \word{eMjalusUtakanirasana}
 \src{va}
-\meaning{\arthanonum{parxtiyoMdu vasutxvU {shivana} parxsAdaveMdu parigaNisidare alilx eMjaleMba BAvaveV iruvudilalx. namamx iMdirxyagaLU, rUparasAdi iMdirxyaviSayagaLU, aMtaHkaraNa catuSaTxyagaLU, parashivana parxsAda eMba BAvadiMda noVDidare eMjaleMba BAvakekx eDeyeV iruvudilalx. hAge BAvisuvudeV eMjalusUtaka nirasana:} \ullekha{kamaRkAMDi liMgabAhayxru vatiRsuvaMtha eMjalusUtakanirasanada vacanavadeMteMdoDe: shirxVguruvina karuNakaTAkaSxkaqpAnaMdadiMda tanumana shudadhx sidadhxvilalxde... liMgajaMgama parxsAdaBoVgoVpaBoVgigaLige eMjalasUtakavelilxhadoV (savasaM. 14; mumukitx. 55-57).}}
+\meaning{\arthanonum{parxtiyoMdu vasutxvU {shivana} parxsAdaveMdu parigaNisidare alilx eMjaleMba BAvaveV iruvudilalx. namamx iMdirxyagaLU, rUparasAdi iMdirxyaviSayagaLU, aMtaHkaraNa catuSaTxyagaLU, parashivana parxsAda eMba BAvadiMda noVDidare eMjaleMba BAvakekx eDeyeV ilalxdiruvudu eMjalusUtaka nirasana:} \ullekha{kamaRkAMDi liMgabAhayxru vatiRsuvaMtha eMjalusUtakanirasanada vacanavadeMteMdoDe: shirxVguruvina karuNakaTAkaSxkaqpAnaMdadiMda tanumana shudadhx sidadhxvilalxde... liMgajaMgama parxsAdaBoVgoVpaBoVgigaLige eMjalasUtakavelilxhadoV (savasaM. 14; mumukitx. 55-57).}}
 \end{entry}
 
 \begin{entry}
 \word{eraDaLida Ekarasa}
 \src{va}
-\meaning{\arthanonum{anuBAvadalilx aMgavu liMgadalilx oMdAgi, tAnu beVre liMga (parashiva) beVre eMba BinanxBAvavanunx kaLedukoLuLxtatxde. vAsatxvikavAgi A samayadalilx tAnu matutx liMga oMdeV eMba adevxYta BAva baradidadxrU, jAgaqta sithxtige baMda naMtara tAnu liMgadalelxV idedxneMdu aMganige anisutatxde. I riVtiya anuBavagaLu avanige padeV padeV uMTAdare avanige jAgaqta sithxtiyalUlx anuBAvada sithxtiyalUlx adevxYta sithxtiyeV uMTAgi, tAneMba aMga (aMsha) BAva hoVgi liMga (pUNaR) BAva mAtarx uLiyutatxde:} \ullekha{shivagaNaMgaLelalx parashivaliMgakala tamagu Binanxvilalxde... aBinanxsavxrUpadiMda eraDaLidu EkarasavAgi puSapx parimaLadaMte, nija shiva samAdhiyalilx beragu hoVdaru noVDA (savasaM. 10; gurusi. 690-381).}}
+\meaning{\arthanonum{liMgAMga sAmarasayx; tAneMba aMga (aMsha) BAva hoVgi liMga (pUNaR) BAva mAtarx uLiyuvudu:} \ullekha{shivagaNaMgaLelalx parashivaliMgakala tamagu Binanxvilalxde... aBinanxsavxrUpadiMda eraDaLidu EkarasavAgi puSapx parimaLadaMte, nija shiva samAdhiyalilx beraguhoVdaru noVDA (savasaM. 10; gurusi. 690-381).}}
 \end{entry}
+%anuBAvadalilx aMgavu liMgadalilx oMdAgi, tAnu beVre liMga (parashiva) beVre eMba BinanxBAvavanunx kaLedukoLuLxtatxde. vAsatxvikavAgi A samayadalilx tAnu matutx liMga oMdeV eMba adevxYta BAva baradidadxrU, jAgaqta sithxtige baMda naMtara tAnu liMgadalelxV idedxneMdu aMganige anisutatxde. I riVtiya anuBavagaLu avanige padeV padeV uMTAdare avanige jAgaqta sithxtiyalUlx anuBAvada sithxtiyalUlx adevxYta sithxtiyeV uMTAgi,
 
 %\begin{entry}
 %\word{E}
@@ -319,15 +316,16 @@ dAvxviMshateVH parasAyxsayx budidhxtatatxvXsayx kAraNamf ||
 %\end{entry}
 
 \begin{entry}
-\word{Ekacitatx manoVBAvi}
-\meaning{\arthanonum{liMgadiVkeSxyanunx paDedanaMtara sAdhakanu liMgadalilx vishAvxsavanunx, niSeThxyanUnx toVrisabeVku. iMtha sAdhakaneV EkacitatxmanoVBAvi. ivanige muKayxvAda eraDu guNagaLirabeVku: (1) liMgaperxVmiyAda baLika vAyxvahArika viSayagaLa BArxMtiyilalxdirabeVku, (2) liMgavanunx mAtarx neneyabeVku. anayxdeYva pUje vajayxR:}}
+\word{EkacitatxmanoVBAvi}
+\meaning{\arthanonum{liMgadiVkeSx paDeda naMtara sAdhaka liMgadalilx paramaniSeThxyanunx hoMdiruvavanu:}}
 \newmeaning{\ni{EkaM ca tatf citatxM ca EkacitatxM manasaH BAvaH manoVBAvaH Ekacitatxsayx manoVBAvaH asayx asitx iti - EkacitatxmanoVBAviV}}
 \end{entry}
+%vishAvxsavanunx, niSeThxyanUnx toVrisabeVku. iMtha sAdhakaneV EkacitatxmanoVBAvi. ivanige muKayxvAda eraDu guNagaLirabeVku: (1) liMgaperxVmiyAda baLika vAyxvahArika viSayagaLa BArxMtiyilalxdirabeVku, (2) liMgavanunx mAtarx neneyabeVku. anayxdeYva pUje vajayxR
 
 \begin{entry}
 \word{EkamuKadalilx niravayajapa}
 \src{va}
-\meaning{\arthanonum{Bakatxsathxlada sAdhakanalilx aMga matutx liMgaveMba devxYtavirutatxde. Ata aikayxsithxtiyanunx muTiTxdAga I BeVda ilalxvAgi avanu EkAgarxcitatxnAgi para\-shivananunx japisutAtxne:} \ullekha{EkamuKadalilx niravaya japa. divxmuKadalilx shakitx saMpakaRyoVga (savasaM. 8; parxsAdi. 29-15).}}
+\meaning{\arthanonum{aikayxsithxtiya sAdhaka liMgAMga BeVda ilalxvAgi avanu EkAgarxcitatxnAgi para\-shivananunx japisuvudu:} \ullekha{EkamuKadalilx niravaya japa. divxmuKadalilx shakitx saMpakaRyoVga (savasaM. 8; parxsAdi. 29-15).}}
 \end{entry}
 
 \begin{entry}
@@ -351,6 +349,8 @@ liMgasathxlamupAsayxM sAyxdaMgasathxlamupAsakamf ||
 \ullekha{shakitxlasadeVkAdashAsayx rudArxkeSxyeV vayxkatxruderxYkAdashAdhipatiyapupxdu virakatx keVLashavxmeVdhaM shataM vAjapeVyaM sahasarxdapuNayxvu (viVsheYpu. 7-104-21).}}
 \newmeaning{\ni{EkAdasha AsAyxni yasayx saH EkAdashAsayxH EkAdashAsayxshacx asw rudArxkaSxshacx - EkAdashAsayxrudArxkaSxH}}
 \end{entry}
+
+%raghu, page 0005.JPG
 
 \begin{entry}
 \word{EkamuKarudArxkiSx(keSx)}
@@ -789,6 +789,31 @@ gotitxlalxdirabahudu. Adare pariNAmavilalxda GaTanegaLilalx.}}
 \end{entry}
 
 %%%ja
+\begin{entry}
+\word{jagatitxna BUrxmadhayx}
+\src{va}
+\meaning{\arthanonum{manuSayxnu oMdu saNaNx jagatutx (piMDAMDa) hAgU jagatutx oMdu
+ mahAnf manuSayx eMbaMte sharaNaru kalipxsikoMDidAdxre. manuSayxnige
+ BUrxmadhayxviruvaMte jagatitxgoMdu BUrxmadhayx 
+ iruvudilalx. janareV elalxra BUrxmadhayxdalilxyU
+ aMtarAtamxnidAdxneMdu heVLuvudeV avara udedxVsha:}
+\ullekha{A paramAtamxneV jagatitxna BUrxmadhayxkekx biMbisidalilx, adeV aMtarAtamxvAyitutx (savasaM. 9; saMgameV. 322-110).}}
+\vskip 2pt
+\newmeaning{\arthanonum{\SEE{aMtarAtamx}}}
+\end{entry}
+
+\begin{entry}
+\word{jagatitxna haqdaya}
+\src{va}
+\meaning{\arthanonum{elalx jiVvAtamxra rUpadalilxruva paramAtamx barxhAmxMDaveV oMdu deVha\-vAdare, adaralilxruva Atamxvu 
+ paramAtamxnenisikoLuLxvaMte mAnavana deVhadalilx jiVvAtamx
+ idAdxne. jiVvAtamxnigeVnoV haqdayaveMba sAthxnavide. Adare
+ jagatitxna haqdayaveMdare yAvudu? jagatitxna haqdaya\-veMdare
+ jagatitxnalilxruva elalx jiVvigaLa haqdaya\-gaLU AguvudariMda parxtiyoMdu
+ haqdayadalilxyU jiVvAtamx\-nidAdxne. A jiVvAtamxra oTuTx rUpaveV parashivana rUpa:}
+\ullekha{A aMtarAtamxneV jagatitxna haqdayakekx biMbisidalilx, adeV jiVvAtamxvAyitutx (savasaM. 9; saMgameV. 322-110).}}
+\end{entry}
+
 \begin{entry}
 \word{jaMgamaniMdaka}
 \meaning{\arthanonum{caraliMgasavxrUpiyAda jaMgamavanunx dUSisuvavanu, tegaLuvavanu:}
