--- a/mainfile.tex
+++ b/mainfile.tex
@@ -13,10 +13,10 @@
 
 \input macros
 %\input final-dict
-%\input dictionary %for jss-001-281.tex
-\input dictionary1
+\input dictionary %for jss-001-281.tex
+%\input dictionary1
 %\input dictionary3
-%\input anu-dictionary
+\input anu-dictionary
 %\input dict-ta-ma-03042019
 %\input dict-ya-La-03042019
 \begin{document}
@@ -28,9 +28,9 @@
 \begin{multicols}{2}
 \setlength{\columnseprule}{.5pt}
 \input tex-for-print/jss-001-281.tex
-\input tex-for-print/jss-282-501.tex
-\setcounter{page}{300}
-\input tex-for-print/ya-La.tex
+%\input tex-for-print/jss-282-501.tex
+%\setcounter{page}{300}
+%\input tex-for-print/ya-La.tex
 \newpage
 \input tex-for-print/anubandha-1.tex
 \end{multicols}
