correction in progress

--- a/tex-for-print/anubandha-1.tex
+++ b/tex-for-print/anubandha-1.tex
@@ -1002,6 +1002,13 @@ satayx eMdu sArutAtxre:}
 \end{entry}
 
 \begin{entry}
+\word{tALu-boVLu - kapapxra}
+\src{va}
+\meaning{\arthanonum{kAMDa, tALu eMdare koVlu, boVLu eMdare taleyanunx boVLisikoLuLxvudu; kapapxra eMdare BikASxpAterx. ivu saMnAyxsiya  mUru lakaSxNa\-gaLu. Adare, cenanxbasavaNaNxnavara parxkAra, kAyada kaLavaLava tALikoLuLxvudeV tALu, saMsAraviSayakekx AsepaDuvudanunx ilalxvAgisuvudeV boVLu. paratatatxvXdalilx niratanAgiruvudeV kapapxra. alalxdidadxre, ivu mUrU DAMBikana lakaSxNagaLenisikoLuLxtatxve:}
+\ullekha{tALu boVLu kapapxrAdigaLeMdeMbaru, tALAvudu, boVLAvudu, kapapxravAvudeMdariyaru (savasaM. 3; cenanxba. 516-160).}}
+\end{entry}
+
+\begin{entry}
 \word{tirxvidhaliMgada pUje}
 \src{kA}
 \meaning{\arthanonum{aSaTxvidhAcaRnegaLiMda iSaTxliMgakUkx, liMgadhAyxna mADutatx maMtarxvanunx japisuva mUlaka pArxNaliMgakUkx, mahAliMgadalilx saMpUNaR tanamxyateyiMda kUDi taqpitxgoLisuvudariMda BAvaliMgakUkx mADuva pUje:}
@@ -1184,6 +1191,12 @@ iruvavaru; vAgadevxYtigaLu.}}
  naDeyuvudu muMtAda kirxyegaLu vAyuvina pariNAmagaLu.}
 \artha{AnaMdapaDuvudu, duHKapaDuvudu, parxkaTapaDisuvudu, mucicxDuvudu muMtAda mAnasika kirxyegaLelalx AkAsha tatatxvXda pariNAmagaLu:}
 \ullekha{paqthAvxdi paMcaBUtaMgaLu idakekx vivara: asithx, camaR, mAMsa, roVma, majejx iveYdu paqthivxya aMsha. shukalx, shoVNita, shelxVSamx pitatx\-rakatx iveYdu apupxvina aMsha. hasivu, taqSe, niderx, Alasayx, sitxrXVsaMga iveYdu aginxya aMsha (savasaM. 3; cenanxba. 1351-477).}}
+\end{entry}
+
+\begin{entry}
+\word{paMceVMdirxyanAsitx}
+\src{va}
+\meaning{\arthanonum{liMgAMgasAmarasayx sAdhisidavanu vishavxdalilx matetxVnanUnx sAdhisabeVkAgilalx. A sididhx \hbox{koDuva} AnaMdavanunx beVrAva iMdirxyavU koDuvudilalxvAdudariMda, avanige paMceVMdirxya\-gaLu koDuva suKadalilx \hbox{Asakitx} ilalxvAgutatxde. sAmarasayx paDeyuva munanx iMdirxyagaLa saMrakaSxNeyalilxyU, avu\-gaLu koDuva suKadalilxyU idadx Asakitx sAmarasayx sAdhisidanaMtara ilalxvAguvudu. samarasAnaMda iMdirxya\-suKakikxMta bahaLa paTuTx migilAgiruvudariMda iMdirxya\-gaLu  eMdinaMte kelasa\-vanunx mADidarU avu\-gaLu koDuva suKa mAtarx nAsitx (va.pa.koV. 239).}}
 \end{entry}
 
 \begin{entry}
