work in progress

--- a/tex-for-print/anubandha-1.tex
+++ b/tex-for-print/anubandha-1.tex
@@ -1144,6 +1144,21 @@ ciMtisuvudu ajAcnxnada kuruhAgutatxde (va.pa.koV. 212):}
 \end{entry}
 
 \begin{entry}
+\word{nirAkArada shakitx}
+\src{va}
+\meaning{\arthanonum{parashiva matutx avana shakitxyanunx parxteyxVkavAgi ciMtisidAga, parashivanu nirAkAra matutx avanu yAvudeV vikAra\-gaLige oLagAguvudilalxveMdU,
+avana shakitxyu elalx riVtiya vikAragaLige oLagAgutatxdeyeMdU
+tiLiyuvudu. Adare, saMgameVshavxrada apapxNaNx `nirAkArada
+shakitxyalilx nirALaveMba tanu' eMdu heVLiruvudu savxlapx
+goMdalavenisutatxde. shakitxyu yAvudeV riVti vikArakokxLapaDuva
+munanx, aMdare parxlaya athavA saqSiTxpUvaR sithxtiyalilx, adakekx
+yAvudeV AkAra\-viruvudilalx. adeV riVti parxpaMcavu shakitxyiMda
+racita\-vAdAga adara vasutxgaLelalxkUkx nAmarUpugaLirutatxve. Adare
+saqSiTxpUvaR sithxti\-yalilx nirAkArashakitxyu parashivana nirALatanuvAgirutatxde (va.pa.koV. 217).}
+\ullekha{nirAkArada shakitxyalilx nirALaveMba tanu, nishUshxnayxveMba shUnayx siMhAsanada meVle GanavAgi toLagi beLagutitxdaRnu (savasaM. 9; saMgameV. 319-109).}}
+\end{entry}
+
+\begin{entry}
 \word{nirAvayavAnaMda saninxhita sharaNa}
 \src{va}
 \meaning{\arthanonum{anuBAvadalilx sAdhakanu parashivaneMba aparimita cititxnalilx
