work in progress (correction complete upto page no. 170)

--- a/tex-for-print/anubandha-1.tex
+++ b/tex-for-print/anubandha-1.tex
@@ -1188,6 +1188,13 @@ saqSiTxpUvaR sithxti\-yalilx nirAkArashakitxyu parashivana nirALatanuvAgirutatxd
 %(ililx saMga, nisasxMga matutx susaMga eMba padagaLu sAMkeVtikavAgi baLakeyAgide)
 
 \begin{entry}
+\word{nihitada uBayasathxla}
+\src{va}
+\meaning{\arthanonum{heVLuva niVti oMdAdare, naDeyuva dAri matotxMdu idu eraDara oLagina rahasayx:}
+\ullekha{mareya gArxsava koMba mataRyxnaMte ISaNatarxyakekx macicx mAtina mAleya niVtiya heVLuva I yAcakarugaLige Etara boVdhe? idu nihitada uBayasathxla (savasaM. 8; parxsAdi. 39-16).}}
+\end{entry}
+
+\begin{entry}
 \word{nuDiye barxhamxvAdavaru}
 \src{va}
 \meaning{\arthanonum{barxhamxda bagege keVvala mAtanADi, naDeyalilx mAtarx lwkikaraMte
@@ -1799,7 +1806,7 @@ parivataRnegaLige atiVta, avaneV nija (satayx), shAshavxta.}}
 \begin{entry}
 \word{pariBarxmaNada sUtaka}
 \src{va}
-\meaning{\arthanonum{nAnu parashivananunx aritidedxVne enanxlu yArigU sAdhayxvilalx. EkeMdare ahaMBAvavanunx kaLedukoLaLxde avananunx ariyalu sAdhayxvilalx. ava\-nanunx arita meVle (ahaM) nAnu eMba BAva naSaTxvAguvudariMda nAnu parashivananunx aritidedxVne eMbudu asatayxvaSeTxV alalx, savxviroVdhavU Agutatxde. hAganunxvudu Barxmeya (pariBarxmaNada) lakaSxNa:}
+\meaning{\arthanonum{parashivananunx aritidedxVne enanxlu yArigU sAdhayxvilalx. EkeMdare ahaMBAvavanunx kaLedukoLaLxde avananunx ariyalu sAdhayxvilalx. ava\-nanunx arita meVle (ahaM) tAnu eMba BAva naSaTxvAguvudariMda tAnu parashivananunx aritidedxVne eMbudu asatayxvaSeTxV alalx, savxviroVdhavU Agutatxde. hAganunxvudu Barxmeya (pariBarxmaNada) lakaSxNa:}
 \ullekha{paripUNaRvAda paraMjoyxVtige parakekx koTuTx, A parava\-naridiheneMba pariBarxmaNada sUtakavilalx (savasaM. 8; mAdAdhU. 1230-429).}}
 \end{entry}
 
